Toegevoegd witte vinkjes buttons form

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -254,7 +254,7 @@
 
 
           <div class="row">
-            <div class="col">
+            <div class="col upload-photos-info">
               <label>Photos</label>
               <p>Please upload one picture with the signature of the artwork and one picture of the artwork.</p>
               <p>You can upload up to 3 pictures with a maximum of 10MB each.</p>
@@ -264,15 +264,15 @@
 
           <div class="row buttons-photos">
             <div class="col">
-              <button type="button" name="image-artwork">UPLOAD IMAGE OF THE ARTWORK</button>
+              <button class="buttons-form" type="button" name="image-artwork">UPLOAD IMAGE <br> OF THE ARTWORK</button>
             </div>
 
             <div class="col">
-              <button type="button" name="image-signature">UPLOAD IMAGE OF THE SIGNATURE</button>
+              <button class="buttons-form" type="button" name="image-signature">UPLOAD IMAGE<br> OF THE SIGNATURE</button>
             </div>
 
             <div class="col">
-              <button type="button" name="optional-image">OPTIONAL IMAGE</button>
+              <button class="buttons-form" type="button" name="optional-image">OPTIONAL IMAGE</button>
             </div>
           </div>
 
