--- a/search.html
+++ b/search.html
@@ -226,7 +226,7 @@
             </div>
 
             <div class="col">
-              <button type="submit" name="submit-search-request">ADMIT REQUEST</button>
+              <button class="buttons-form" type="submit" name="submit-search-request">ADMIT REQUEST</button>
             </div>
           </div>
 
