Toegevoegd juiste verhouding laatste kolom formulier

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -302,12 +302,12 @@
 
 
           <div class="row">
-            <div class="col">
+            <div class="col auction-small-col">
               <label>End date</label>
               <input type="date" class="form-control" placeholder="DD/MM/YY" name="end-date" required>
             </div>
 
-            <div class="col">
+            <div class="col attention-info">
               <label>Attention</label>
               <p>You can not change the information after adding this auction.</p>
               <p>If you're not certain about the information of your artwork, please ask for help.</p>
@@ -318,7 +318,7 @@
 
 
           <div class="row">
-            <div class="col">
+            <div class="col auction-small-col">
 
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="check-terms">
