Toegevoegd opmaak checkbox terms & conditions

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -318,7 +318,7 @@
 
 
           <div class="row">
-            <div class="col auction-small-col">
+            <div class="col auction-medium-small-col">
 
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="check-terms">
