Toegevoegd opmaak submit button van form

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -327,9 +327,9 @@
                 </label>
               </div>
 
-              <button class="submit" type="submit" name="submit-new-auction">ADD AUCTION</button>
+              <button class="buttons-form submit" type="submit" name="submit-new-auction">ADD AUCTION</button>
 
-              <p>
+              <p class="add-auction-question">
                 <a href="#">ASK A QUESTION</a>
                 <a href="#"><img class="display-inline" src="images/pijltje-visit-auction.png" alt="arrow right"></a>
               </p>
