Toegevoegd dropdown met styling voor zover mogelijk bij select

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -195,7 +195,32 @@
         <h1>Add a new auction</h1>
 
 
+
         <form class="form-add-auction" id="needs-validation" action="search.html" method="post" novalidate>
+
+          <div class="row">
+            <div class="col">
+
+              <select class="form-control">
+                <option>Style</option>
+                <option>Abstract</option>
+                <option>African American</option>
+                <option>Asian Contemporary</option>
+                <option>Conceptual</option>
+                <option>Contemporary</option>
+                <option>Emerging Artists</option>
+                <option>Figurative</option>
+                <option>Middle Eastern Contemporary</option>
+                <option>Minimalism</option>
+                <option>Modern</option>
+                <option>Pop</option>
+                <option>Urban</option>
+                <option>Vintage Photographs</option>
+              </select>
+
+            </div>
+          </div>
+
 
           <div class="row">
             <div class="col">
