Toegevoegd gedeeltelijke responsiveness voor register pagina

--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -342,7 +342,7 @@
 
 
 
-          <div class="row">
+          <div class="row submit-row">
             <div class="col auction-medium-small-col">
 
               <div class="form-check">
