--- a/register.html
+++ b/register.html
@@ -275,7 +275,7 @@
 
 
 
-            <div class="col col-6">
+            <div class="col col-6 phone-number">
 
               <label>Phone number</label>
 
@@ -320,8 +320,8 @@
 
 
 
-          <div class="row">
-            <div class="col auction-medium-small-col">
+          <div class="row submit-row">
+            <div class="col col-4">
 
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="check-terms">
@@ -330,12 +330,7 @@
                 </label>
               </div>
 
-              <button class="buttons-form submit" type="submit" name="submit-new-auction">ADD AUCTION</button>
-
-              <p class="add-auction-question">
-                <a href="#">ASK A QUESTION</a>
-                <a href="#"><img class="display-inline" src="images/pijltje-visit-auction.png" alt="arrow right"></a>
-              </p>
+              <button class="buttons-form submit" type="submit" name="submit-registration">REGISTER</button>
 
             </div>
           </div>
