Opmaak buttons algemener/herbruikbaar gemaakt, in style gestoken

--- a/faq.html
+++ b/faq.html
@@ -221,7 +221,7 @@
 
       <div class="clearfix">
 
-        <button class="search-faq" type="button">
+        <button class="button-light search-button" type="button">
           <p class="display-inline"><a href="search.html">I SEARCH</a></p>
           <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
         </button>
