--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -289,15 +289,15 @@
 
           <div class="row buttons-photos">
             <div class="col">
-              <button class="buttons-form" type="button" name="image-artwork">UPLOAD IMAGE <br> OF THE ARTWORK</button>
+              <button class="button-dark" type="button" name="image-artwork">UPLOAD IMAGE <br> OF THE ARTWORK</button>
             </div>
 
             <div class="col">
-              <button class="buttons-form" type="button" name="image-signature">UPLOAD IMAGE<br> OF THE SIGNATURE</button>
+              <button class="button-dark" type="button" name="image-signature">UPLOAD IMAGE<br> OF THE SIGNATURE</button>
             </div>
 
             <div class="col">
-              <button class="buttons-form" type="button" name="optional-image">OPTIONAL IMAGE</button>
+              <button class="button-dark" type="button" name="optional-image">OPTIONAL IMAGE</button>
             </div>
           </div>
 
@@ -352,7 +352,7 @@
                 </label>
               </div>
 
-              <button class="buttons-form submit" type="submit" name="submit-new-auction">ADD AUCTION</button>
+              <button class="button-submit" type="submit" name="submit-new-auction">ADD AUCTION</button>
 
               <p class="add-auction-question">
                 <a href="#">ASK A QUESTION</a>
