--- a/myauctions.html
+++ b/myauctions.html
@@ -195,6 +195,16 @@
         <h1>My auctions</h1>
 
 
+        <div class="clearfix">
+
+          <button class="button-light" type="button">
+            <p class="display-inline"><a href="myauctions-new.html">ADD NEW AUCTION</a></p>
+            <img class="display-inline" src="images/pijltje-small-dark-blue.png" alt="arrow-right">
+          </button>
+
+        </div>
+
+
         <h4>Pending</h4>
 
 
