--- a/register.html
+++ b/register.html
@@ -330,7 +330,7 @@
                 </label>
               </div>
 
-              <button class="buttons-form submit" type="submit" name="submit-registration">REGISTER</button>
+              <button class="button-submit" type="submit" name="submit-registration">REGISTER</button>
 
             </div>
           </div>
