--- a/myauctions-new.html
+++ b/myauctions-new.html
@@ -128,7 +128,7 @@
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="home.html">HOME</a>
+                        <a class="nav-link" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">ART</a>
@@ -137,7 +137,7 @@
                         <a class="nav-link" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="#">MYAUCTIONS</a>
+                        <a class="nav-link active" href="#">MYAUCTIONS</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYBIDS</a>
