--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
                   <ul class="nav">
 
                     <li class="nav-item-top">
-                      <a class="nav-link" href="register.html">REGISTER</a>
+                      <a class="nav-link active" href="register.html">REGISTER</a>
                     </li>
 
                     <li class="nav-item-top">
