--- a/search.html
+++ b/search.html
@@ -128,13 +128,13 @@
 
                   <ul class="nav">
                       <li class="nav-item-bottom">
-                        <a class="nav-link active" href="home.html">HOME</a>
+                        <a class="nav-link" href="home.html">HOME</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">ART</a>
                       </li>
                       <li class="nav-item-bottom">
-                        <a class="nav-link" href="search.html">ISEARCH</a>
+                        <a class="nav-link active" href="search.html">ISEARCH</a>
                       </li>
                       <li class="nav-item-bottom">
                         <a class="nav-link" href="#">MYAUCTIONS</a>
