Filter element my watchlist klaar

--- a/mywatchlist.html
+++ b/mywatchlist.html
@@ -213,9 +213,9 @@
 
 
         <p>
-          <a class="small-grey active" href="#">all(11)</a> |
-          <a class="small-grey" href="#">active(8)</a> |
-          <a class="small-grey" href="#">ended(3)</a>
+          <a class="small-grey filter" href="#">all(11)</a> |
+          <a class="small-grey filter" href="#">active(8)</a> |
+          <a class="small-grey filter" href="#">ended(3)</a>
         </p>
 
 
